# crypto-forecast-thesis

./: .env.example  .gitignore  LICENSE  Makefile  README.md  environment.yml  generate_repo_content.py  pyproject.toml  requirements.txt  save_predictions.py  setup_project.py
docs/: api_reference.md  data_dictionary.md  experiment_log.md
experiments/configs/: ablation_no_onchain.yaml  base_config.yaml  lstm_btc_1h.yaml  transformer_eth_1d.yaml
experiments/results/: ablation_lstm_BTC_1d_h1.csv  attention_lstm_BTC_1d_h1_predictions.npy  attention_lstm_BTC_1d_h1_results.csv  attention_lstm_BTC_1d_metrics.csv  bilstm_BTC_1d_h1_predictions.npy  bilstm_BTC_1d_h1_results.csv  bilstm_BTC_1d_metrics.csv  cnn_lstm_BTC_1d_h1_results.csv  cnn_lstm_BTC_1d_metrics.csv  gru_BTC_1d_h1_predictions.npy  gru_BTC_1d_h1_results.csv  gru_BTC_1d_metrics.csv  lstm_BTC_1d_h1_predictions.npy  lstm_BTC_1d_h1_results.csv  lstm_BTC_1d_metrics.csv  transformer_BTC_1d_h1_predictions.npy  transformer_BTC_1d_h1_results.csv  transformer_BTC_1d_metrics.csv
lightning_logs/version_0/: hparams.yaml  metrics.csv
lightning_logs/version_1/: hparams.yaml  metrics.csv
lightning_logs/version_6/: metrics.csv
notebooks/: 01_data_exploration.ipynb  02_feature_engineering_demo.ipynb  03_baseline_models.ipynb  04_model_training_demo.ipynb  05_results_analysis.ipynb  06_visualization_gallery.ipynb
scripts/: run_ablation.py  run_all_experiments.py  run_data_pipeline.py  run_evaluation.py  run_training.py  run_tuning.py
src/: __init__.py
tests/: conftest.py  test_metrics.py  test_models.py
(+107 files in other folders)
