[project]
name = "crypto-forecast-thesis"
version = "0.1.0"
description = "Deep learning for cryptocurrency price forecasting: a multi-model approach"
authors = [{name = "Justin Fogue Nkouatchet"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
